<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:rowCount="7"
    android:columnCount="1"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard_background_hex_gradient"
    tools:context="edu.orangecoastcollege.cs273.ecoquest.DashboardActivity">

    <LinearLayout
        android:layout_row="3"
        android:id="@+id/firstRowLinearLayout"
        android:layout_width="match_parent"
        android:layout_marginTop="200dp"
        style="@style/LinearLayoutHeight" >

        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:onClick="viewMapActivity"
            android:background="@color/cardview_light_background"
            android:text="@string/map"
            android:layout_height="match_parent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/profile"
            android:onClick="viewProfilePage"
            android:background="@color/cardview_light_background"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_row="4"
        android:id="@+id/secondRowLinearLayout"
        android:layout_width="match_parent"
        style="@style/LinearLayoutHeight" >

        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/badges"
            android:onClick="viewBadgeList"
            android:background="@color/cardview_light_background"
            android:layout_height="match_parent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/boards"
            android:layout_margin="10dp"
            android:background="@color/cardview_light_background"
            android:onClick="viewLeaderboards"
            android:layout_height="match_parent"/>


    </LinearLayout>

    <LinearLayout
        android:layout_row="5"
        android:id="@+id/thirdRowLinearLayout"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:background="@color/cardview_light_background"
        style="@style/LinearLayoutHeight" >

        <Button
            android:id="@+id/questsButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#aba"
            android:text="@string/quests"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#eeffee"
            android:onClick="questsPage"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_row="6"
        android:id="@+id/fourthRowLinearLayout"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/cardview_light_background"
        style="@style/LinearLayoutHeight" >

        <Button
            android:id="@+id/turnInQuestButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#aba"
            android:text="@string/complete_a_quest"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#eeffee"
            android:onClick="completeAQuest"
            android:layout_height="match_parent"/>

    </LinearLayout>


</GridLayout>
